--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,31 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>construction</title>
-  </head>
-  <body>
-    <noscript>
-      <strong>We're sorry but construction doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>建工施工图审查进度信息查询</title>
+  <meta name="keywords" content="建工施工图审查进度信息查询">
+  <meta name="description" content="建工施工图审查进度信息查询">
+  <meta http-equiv="content-type" content="text/html;charset=utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=1">
+  <link rel="manifest" href="./manifest.json">
+  <link rel="icon" href="./favicon.ico">
+  <meta name="renderer" content="webkit">
+  <meta http-equiv="Cache-Control" content="no-siteapp" />
+  <!-- Add to home screen for Safari on iOS -->
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <meta name="apple-mobile-web-app-title" content="建工施工图审查进度信息查询">
+  <link rel="apple-touch-icon" href="./img/icons/favicon-512x512.ico">
+  <!-- Add to home screen for Windows -->
+  <meta name="msapplication-TileImage" content="./img/icons/favicon-512x512.ico">
+  <meta name="msapplication-TileColor" content="#000000">
+</head>
+
+<body>
+  <div id="app"></div>
+  <!-- built files will be auto injected -->
+</body>
+
 </html>
