--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,9 @@
   <!-- Add to home screen for Windows -->
   <meta name="msapplication-TileImage" content="./img/icons/favicon-512x512.ico">
   <meta name="msapplication-TileColor" content="#000000">
+  <script>
+    var vm = {};
+  </script>
 </head>
 
 <body>
